--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dashboard",
+  "homepage": "https://openclassroomsp8.onrender.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
