--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "lucide-react": "^0.552.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
