--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "homepage": "https://www.filipe-motta.com/",
   "private": true,
+  "proxy": "http://localhost:3000",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
