--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashboard",
-  "homepage": "https://dashboard.filipe-motta.com/",
+  "homepage": "https://dashboard.filipe-motta.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
