--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.2",
     "lucide-react": "^0.552.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
